# SmoPharm

./: .gitignore  README.md  build.yaml  pubspec.yaml
android/: local.properties
android/app/: build.gradle
lib/: main.dart
lib/data/repositories/: batch_repository_impl.dart  product_repository_impl.dart  sale_repository_impl.dart  settings_repository_impl.dart  stock_adjustment_repository_impl.dart  stock_in_repository_impl.dart
lib/data/services/: auth_service_impl.dart  (+6 more)
lib/database/: database.dart  tables.dart
lib/providers/: batch_provider.dart  database_provider.dart  low_stock_provider.dart  report_provider.dart  sale_provider.dart  session_timeout_provider.dart  settings_provider.dart  stock_adjustment_provider.dart  stock_in_provider.dart  sync_status_provider.dart
test/auth/: auth_service_impl_test.dart  property_test_account_lockout.dart  property_test_auth_required.dart  property_test_role_access.dart  role_guard_test.dart  session_timeout_test.dart
test/batch/: batch_repository_test.dart  property_test_fefo.dart  property_test_near_expiry_flagging.dart  property_test_stock_level.dart
test/database/: database_test.dart
test/integration/: session_timeout_test.dart  sync_flow_test.dart
test/offline/: conflict_resolver_test.dart  offline_queue_test.dart  property_test_conflict_resolution.dart  property_test_offline_queue_capture.dart  property_test_sync_clears_queue.dart  sync_service_test.dart
test/product/: low_stock_test.dart  product_repository_test.dart  property_test_low_stock_alert.dart  property_test_low_stock_sort.dart  property_test_product_deletion.dart  property_test_product_search.dart  property_test_unique_product_ids.dart
test/receipt/: property_test_receipt_completeness.dart  receipt_service_test.dart
test/report/: csv_export_test.dart  property_test_csv_export.dart  property_test_daily_sales_report.dart  property_test_inventory_report.dart  report_service_test.dart
test/sale/: property_test_oversell_prevention.dart  property_test_sale_decrements_stock.dart  property_test_sale_total.dart  property_test_same_day_void.dart  sale_repository_test.dart  sale_void_test.dart
test/settings/: property_test_near_expiry_window.dart  property_test_settings_persistence.dart  settings_repository_test.dart
test/stock_adjustment/: property_test_audit_trail.dart  property_test_non_negative_stock.dart  stock_adjustment_repository_test.dart
test/stock_in/: property_test_stock_in.dart  stock_in_repository_test.dart
windows/: CMakeLists.txt
windows/flutter/ephemeral/.plugin_symlinks/: app_links  connectivity_plus  path_provider_windows  printing  shared_preferences_windows  sqlite3_flutter_libs  url_launcher_windows
windows/runner/: main.cpp
(+42 files in other folders)
